syntax = "proto3";
package app;
option go_package = ".;pb";

service AppService {
    rpc Event (stream EventRequest) returns (stream EventResponse);
}

message EventRequest {
    Event event = 1;
}

message EventResponse {
    Event event = 1;
}

message Event {
    oneof event_oneof {
        Sound sound = 1;
        Users users = 2;
    }
}

message Sound {
    int32 soundId = 1;
    bool isDown = 2;
    string userId = 3;
}

message Users {
    repeated string userId = 1;
}
